--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -1,183 +1,212 @@
-<p> </p>
-<table style="text-align: left; width: 100%; margin-left: auto;
-    margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
+<p></p>
+
+<table border="0" cellpadding="15" cellspacing="0" style=
+"text-align: left; width: 100%; margin-left: auto; margin-right: auto;">
     <tbody>
-    <tr>
-        <th style="vertical-align: top; background-color: white;
-        width: 102px;">About<br>
-        </th>
-        <td style="vertical-align: top;">Pyspread is a non-traditional
-        spreadsheet application that is based on and written in the
-        programming language <a href="http://www.python.org/">Python</a>.
-        <br>
-        <br>
-        The goal of pyspread is to be the most pythonic spreadsheet.<br>
-        <br>
-        Pyspread expects Python expressions in its grid cells, which
-        makes a spreadsheet specific language obsolete. Each cell
-        returns a Python object that can be accessed from other
-        cells. These objects can represent anything including lists
-        or matrices.<br>
-        <br>
-        Pyspread is free software. It is released under the <a
-            href="http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.<br>
-        </td>
-        <td style="vertical-align: top;"><br>
-        </td>
-        <td style="width: 211px;"><a
-            href="images/screenshot_main_window_0.2.0.png"><img
-            alt="Pyspread main window"
-            src="images/screenshot_main_window_0.2.0_preview.png"
-            style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
-        </td>
-    </tr>
-    <tr>
-        <th style="vertical-align: top; width: 102px;">Features<br>
-        </th>
-        <td style="vertical-align: top;">
-        <ul style="text-align: left;">
-            <li> Three dimensional grid with up to 80 million rows<br>
-            </li>
-            <li>Macros</li>
-            <li>CSV import and export</li>
-            <li>Save file signatures for preventing foreign code
-            execution <br>
-            </li>
-            <li>Python module access, which allows:</li>
-            
-            <li>Matrix operations via <a
-                href="http://www.numpy.org/">numpy</a></li>
-            <li>Fixed point decimal numbers for business
-                calculations via <a
-                href="http://docs.python.org/library/decimal.html">decimal</a>
-            </li>
-            <li>Advanced plotting via <a
-                href="http://matplotlib.org/">matplotlib</a></li>
-            <li>Much more via <span style="font-style: italic;">
-            &lt;your favorite module&gt;</span></li>
-            
-        </ul>
-        </td>
-        <td style="vertical-align: top;"><br>
-        </td>
-        <td style="width: 211px;"><a
-            href="images/screenshot_sinus_large.png"><img
-            style="border: 0px solid ; width: 200px; height: 144px;"
-            alt="Pyspread screenshot"
-            src="images/screenshot_sinus_thumb.png"></a><br>
-        <a href="images/screenshot_fonts.png"><br>
-        </a> </td>
-    </tr>
-    <tr>
-        <th style="vertical-align: top;">news<br>
-        </th>
-        <td style="vertical-align: top; text-align: left;">April
-        2013: The Debian package of pyspread 0.2.3 has been updated by
-        Andreas Noteng. Get it <a
-            href="http://ftp.us.debian.org/debian/pool/main/p/pyspread/pyspread_0.2.3-2_all.deb">here</a>.<br>
-        <br>
-        January 2013: Pyspread 0.2.3 is out. Get it <a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">here</a>.
-        <div style="margin-left: 40px;"><br>
-            New features:<br>
-            <ul>
-            <li>Matplotlib charts</li>
-            <li>Image display in cells</li>
-            <li>Localization in German, Dutch, Danish and Ukrainian
+        <tr>
+            <th style=
+            "vertical-align: top; background-color: white; width: 102px;">
+            About<br></th>
+
+            <td style="vertical-align: top;">
+                Pyspread is a non-traditional spreadsheet application that is
+                based on and written in the programming language <a href=
+                "http://www.python.org/">Python</a>.<br>
                 <br>
-            </li>
-            <li>Migration away from the PyMe dependency<br>
-            </li>
-            </ul>
-        </div>
-        April 2012: Pyspread version 0.2.2 has been <a
-            href="http://packages.debian.org/testing/python/pyspread">uploaded
+                The goal of pyspread is to be the most pythonic
+                spreadsheet.<br>
+                <br>
+                Pyspread expects Python expressions in its grid cells, which
+                makes a spreadsheet specific language obsolete. Each cell
+                returns a Python object that can be accessed from other cells.
+                These objects can represent anything including lists or
+                matrices.<br>
+                <br>
+                Pyspread is free software. It is released under the <a href=
+                "http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.<br>
+            </td>
 
+            <td style="vertical-align: top;"><br></td>
 
+            <td style="width: 211px;">
+                <a href="images/screenshot_main_window_0.2.0.png"><img alt=
+                "Pyspread main window" src=
+                "images/screenshot_main_window_0.2.0_preview.png" style=
+                "border: 0px solid ; width: 200px; height: 154px;"></a><br>
+            </td>
+        </tr>
 
+        <tr>
+            <th style="vertical-align: top; width: 102px;">Features<br></th>
 
+            <td style="vertical-align: top;">
+                <ul style="text-align: left;">
+                    <li>Three dimensional grid with up to 80 million
+                    rows<br></li>
 
+                    <li>Macros</li>
 
-            to Debian</a> by Andreas Noteng. Many thanks to him for
-        packaging. It is now installable in Debian testing and in
-        unstable using "apt-get install pyspread". <a
-            href="http://packages.ubuntu.com/quantal/pyspread">Pyspread
+                    <li>CSV import and export</li>
 
+                    <li>Save file signatures for preventing foreign code
+                    execution<br></li>
 
+                    <li>Python module access, which allows:</li>
 
-            is also available in Ubuntu</a> in release 12.10 Quantal
-        Quetzal.<br>
-        </td>
-        <td style="vertical-align: top;"><br>
-        </td>
-        <td style="vertical-align: top;"><br>
-        </td>
-    </tr>
-    <tr>
-        <th style="vertical-align: top; width: 102px;">Requirements<br>
-        </th>
-        <td style="vertical-align: top;">Pyspread is designed for
-        Linux and other GTK platforms.<br>
-        <br>
-        Due to time restrictions, Windows™ support has been
-        discontinued starting with version 0.2.0. If you run
-        Windows, get version 0.1.2 from <a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">here</a>.
-        If you would like to maintain a Windows version please
-        contact me.<br>
-        <br>
-        <span style="text-decoration: underline;">Dependencies </span><br>
-        <ul>
-            <li><a href="http://www.python.org/">Python</a> (&gt;=2.7,
-            &lt;3.0)</li>
-            <li><a href="http://www.numpy.org/">numpy</a> (&gt;=1.1.0)</li>
-            <li><a href="http://www.wxpython.org/">wxPython</a>
-            (&gt;=2.8.10.1, Unicode version required)</li>
-            <li><a href="http://matplotlib.org/">matplotlib</a>
-            (&gt;=1.1.1)<br>
-            </li>
-            <li><a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
-            (&gt;=0.3.0)<br>
-            </li>
-        </ul>
-        </td>
-        <td style="vertical-align: top;"><br>
-        </td>
-        <td style="width: 211px;"><a
-            href="images/screenshot_wagner_large.png"><img
-            alt="Pyspread screenshot"
-            src="images/screenshot_wagner_thumb.png" style="border:
-            0px solid ; width: 200px; height: 144px;"></a> </td>
-    </tr>
-    <tr>
-        <th style="vertical-align: top;">contact<br>
-        </th>
-        <td style="vertical-align: top;">For user questions or
-        feedback please post to the pyspread-users mailing list by
-        sending an e-mail to <a
-            href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
-        You can <a
-            href="https://mail.gna.org/listinfo/pyspread-users/">here</a>
-        subscribe to the list.<br>
-        <br>
-        For contributions, patches, development discussions and
-        ideas please post to the pyspread-dev mailing list by
-        sending an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
-        You can <a
-            href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
-        subscribe to the list.</td>
-        <td style="vertical-align: top;"><br>
-        </td>
-        <td><br>
-        </td>
-    </tr>
+                    <li>Matrix operations via <a href="http://www.numpy.org/">
+                        numpy</a>
+                    </li>
+
+                    <li>Fixed point decimal numbers for business calculations
+                    via <a href="http://docs.python.org/library/decimal.html">
+                        decimal</a>
+                    </li>
+
+                    <li>Advanced plotting via <a href="http://matplotlib.org/">
+                        matplotlib</a>
+                    </li>
+
+                    <li>Much more via <span style=
+                    "font-style: italic;">&lt;your favorite
+                    module&gt;</span></li>
+                </ul>
+            </td>
+
+            <td style="vertical-align: top;"><br></td>
+
+            <td style="width: 211px;">
+                <a href="images/screenshot_sinus_large.png"><img alt=
+                "Pyspread screenshot" src="images/screenshot_sinus_thumb.png"
+                style=
+                "border: 0px solid ; width: 200px; height: 144px;"></a><br>
+                <a href="images/screenshot_fonts.png"><br></a>
+            </td>
+        </tr>
+
+        <tr>
+            <th style="vertical-align: top;">news<br></th>
+
+            <td style="vertical-align: top; text-align: left;">
+                April 2013: The Debian package of pyspread 0.2.3 has been
+                updated by Andreas Noteng. Get it <a href=
+                "http://ftp.us.debian.org/debian/pool/main/p/pyspread/pyspread_0.2.3-2_all.deb">
+                here</a>.<br>
+                <br>
+                January 2013: Pyspread 0.2.3 is out. Get it <a href=
+                "http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">
+                here</a>.
+
+                <div style="margin-left: 40px;">
+                    <br>
+                    New features:<br>
+
+                    <ul>
+                        <li>Matplotlib charts</li>
+
+                        <li>Image display in cells</li>
+
+                        <li>Localization in German, Dutch, Danish and
+                        Ukrainian<br></li>
+
+                        <li>Migration away from the PyMe dependency<br></li>
+                    </ul>
+                </div>April 2012: Pyspread version 0.2.2 has been <a href=
+                "http://packages.debian.org/testing/python/pyspread">uploaded
+                to Debian</a> by Andreas Noteng. Many thanks to him for
+                packaging. It is now installable in Debian testing and in
+                unstable using "apt-get install pyspread". <a href=
+                "http://packages.ubuntu.com/quantal/pyspread">Pyspread is also
+                available in Ubuntu</a> in release 12.10 Quantal Quetzal.<br>
+            </td>
+
+            <td style="vertical-align: top;"><br></td>
+
+            <td style="vertical-align: top;"><br></td>
+        </tr>
+
+        <tr>
+            <th style="vertical-align: top; width: 102px;">
+            Requirements<br></th>
+
+            <td style="vertical-align: top;">
+                Pyspread is designed for Linux and other GTK platforms.<br>
+                <br>
+                Due to time restrictions, Windows™ support has been
+                discontinued starting with version 0.2.0. If you run Windows,
+                get version 0.1.2 from <a href=
+                "http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">
+                here</a>. If you would like to maintain a Windows version
+                please contact me.<br>
+                <br>
+                <span style=
+                "text-decoration: underline;">Dependencies</span><br>
+
+                <ul>
+                    <li>
+                        <a href="http://www.python.org/">Python</a> (&gt;=2.7,
+                        &lt;3.0)
+                    </li>
+
+                    <li>
+                        <a href="http://www.numpy.org/">numpy</a> (&gt;=1.1.0)
+                    </li>
+
+                    <li>
+                        <a href="http://www.wxpython.org/">wxPython</a>
+                        (&gt;=2.8.10.1, Unicode version required)
+                    </li>
+
+                    <li>
+                        <a href="http://matplotlib.org/">matplotlib</a>
+                        (&gt;=1.1.1)<br>
+                    </li>
+
+                    <li>
+                        <a href=
+                        "http://code.google.com/p/python-gnupg/">python-gnupg</a>
+                        (&gt;=0.3.0)<br>
+                    </li>
+                </ul>
+            </td>
+
+            <td style="vertical-align: top;"><br></td>
+
+            <td style="width: 211px;">
+                <a href="images/screenshot_wagner_large.png"><img alt=
+                "Pyspread screenshot" src="images/screenshot_wagner_thumb.png"
+                style="border: 0px solid ; width: 200px; height: 144px;"></a>
+            </td>
+        </tr>
+
+        <tr>
+            <th style="vertical-align: top;">contact<br></th>
+
+            <td style="vertical-align: top;">
+                For user questions or feedback please post to the
+                pyspread-users mailing list by sending an e-mail to <a href=
+                "mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>. You
+                can <a href=
+                "https://mail.gna.org/listinfo/pyspread-users/">here</a>
+                subscribe to the list.<br>
+                <br>
+                For contributions, patches, development discussions and ideas
+                please post to the pyspread-dev mailing list by sending an
+                e-mail to <a href=
+                "mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>. You can
+                <a href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
+                subscribe to the list.
+            </td>
+
+            <td style="vertical-align: top;"><br></td>
+
+            <td><br></td>
+        </tr>
     </tbody>
 </table>
-<p> </p>
-<p><span style="font-style: italic;"><small>Copyright Martin Manns</small><font size="-1"><br>
-        Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
-        style="font-style: italic;">
-    </font></span><font size="-1"><span style="font-style: italic;">
-        Last changed: 12. May 2013
-    </span></font>
-</p>
+
+<p></p>
+
+<p><span style="font-style: italic;"><small>Copyright Martin Manns</small><br>
+Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
+"font-style: italic;"></span> <span style="font-style: italic;">Last changed:
+12. May 2013</span></p>
