--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
     }
     h3 {
         font-family: Arial,Helvetica,sans-serif;
-        font-weight: normal;
+        font-weight: bold;
         font-style: normal;
         text-transform: none;
         text-align: left;
