Obsolete image removed, tutorial images added

--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -80,8 +80,8 @@ grid.</p>
 </pre><br>
 
 <p>The result is [1 2 2] as expected. Now copy the cell (Crtl-C) and paste it
-into the next lower cell (Ctrl-V). [2 2 2] is displayed.&lt;p&gt; Therefore,
-relative addressing is achieved. &lt;p&gt; Note that if cells are called from
+into the next lower cell (Ctrl-V). [2 2 2] is displayed. Therefore,
+relative addressing is achieved. Note that if cells are called from
 within other cells, the innermost cell is considered the current cell and its
 position is returned.</p>
 
