Tutorial linked to docs page

--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -18,7 +18,9 @@
         <tr>
             <th style="vertical-align: top;">Tutorial<br></th>
 
-            <td style="vertical-align: top;">The pyspread tutorial.<br></td>
+            <td style="vertical-align: top;">
+                <a href="tutorial.html">The pyspread tutorial.</a>
+            </td>
 
             <td style="vertical-align: top;"><br></td>
 
@@ -55,6 +57,6 @@
 <p><span style="font-style: italic;"><small>Copyright Martin Manns</small><br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-12. May 2013</span></p>
+14. May 2013</span></p>
 
 <p><span style="font-style: italic;"><small></small></span></p>
