Copyright font size increased, Date changed

--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -83,9 +83,7 @@ def factorize(number):<br>    """Silly factorizing algorithm for demonstration p
     </tbody>
 </table>
 
-<p><span style="font-style: italic;"><small>Copyright Martin Manns</small><br>
+<p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-12. May 2013</span></p>
-
-<p><span style="font-style: italic;"><small></small></span></p>
+14. May 2013</span></p>
