--- a/_includes/content/tutorial.html
+++ b/_includes/content/tutorial.html
@@ -210,4 +210,7 @@ S[2, 0, 3]<br><br>
 </pre>for y values. A figure displays inside the dialog. Press Ok and the
 figure is displayed inside the current cell. It scales with cell size.<br>
 
-<p><em>© Martin Manns</em></p>
+<p><span style="font-style: italic;">Copyright Martin Manns<br>
+Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
+"font-style: italic;"></span> <span style="font-style: italic;">Last changed:
+14. May 2013</span></p>
