Path corrected for contribution page

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -81,7 +81,7 @@
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
                       24px; height: 24px;" alt=""
-                      src="../../images/chart_line.png"><br>
+                      src="images/chart_line.png"><br>
                   </td>
                   <td style="vertical-align: top;">Line / scatter plot<br>
                   </td>
@@ -94,7 +94,7 @@
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
                       24px; height: 24px;" alt=""
-                      src="../../images/chart_column.png"><br>
+                      src="images/chart_column.png"><br>
                   </td>
                   <td style="vertical-align: top;">Bar plot<br>
                   </td>
@@ -107,7 +107,7 @@
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
                       24px; height: 24px;" alt=""
-                      src="../../images/chart_histogram.png"><br>
+                      src="images/chart_histogram.png"><br>
                   </td>
                   <td style="vertical-align: top;">Histogram<br>
                   </td>
@@ -119,7 +119,7 @@
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
                       24px; height: 24px;" alt=""
-                      src="../../images/chart_boxplot.png"><br>
+                      src="images/chart_boxplot.png"><br>
                   </td>
                   <td style="vertical-align: top;">Box plot<br>
                   </td>
@@ -131,7 +131,7 @@
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
                       24px; height: 24px;" alt=""
-                      src="../../images/chart_pie.png"><br>
+                      src="images/chart_pie.png"><br>
                   </td>
                   <td style="vertical-align: top;">Pie chart<br>
                   </td>
@@ -143,7 +143,7 @@
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
                       24px; height: 24px;" alt=""
-                      src="../../images/chart_annotate.png"><br>
+                      src="images/chart_annotate.png"><br>
                   </td>
                   <td style="vertical-align: top;">Annotation text<br>
                   </td>
