--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -87,7 +87,7 @@
                   </td>
                   <td style="vertical-align: top;">plot<br>
                   </td>
-                  <td style="vertical-align: top;">Martin Manns</td>
+                  <td style="vertical-align: top;">Martin</td>
                   <td style="vertical-align: top;">0.2.3<br>
                   </td>
                 </tr>
@@ -100,7 +100,7 @@
                   </td>
                   <td style="vertical-align: top;">bar<br>
                   </td>
-                  <td style="vertical-align: top;">Martin Manns</td>
+                  <td style="vertical-align: top;">Martin</td>
                   <td style="vertical-align: top;">0.2.3<br>
                   </td>
                 </tr>
@@ -112,7 +112,7 @@
                   <td style="vertical-align: top;">Histogram<br>
                   </td>
                   <td style="vertical-align: top;">hist</td>
-                  <td style="vertical-align: top;">Martin Manns</td>
+                  <td style="vertical-align: top;">Martin</td>
                   <td style="vertical-align: top;">0.2.4<br>
                   </td>
                 </tr>
@@ -124,7 +124,7 @@
                   <td style="vertical-align: top;">Box plot<br>
                   </td>
                   <td style="vertical-align: top;">boxplot</td>
-                  <td style="vertical-align: top;">Martin Manns</td>
+                  <td style="vertical-align: top;">Martin</td>
                   <td style="vertical-align: top;">0.2.4<br>
                   </td>
                 </tr>
@@ -137,7 +137,7 @@
                   </td>
                   <td style="vertical-align: top;">pie<br>
                   </td>
-                  <td style="vertical-align: top;">Martin Manns</td>
+                  <td style="vertical-align: top;">Martin</td>
                   <td style="vertical-align: top;">0.2.4</td>
                 </tr>
                 <tr>
@@ -149,7 +149,7 @@
                   </td>
                   <td style="vertical-align: top;">annotate<br>
                   </td>
-                  <td style="vertical-align: top;">Martin Manns</td>
+                  <td style="vertical-align: top;">Martin</td>
                   <td style="vertical-align: top;">0.2.4</td>
                 </tr>
                 <tr>
